added calculator output result

--- a/index.html
+++ b/index.html
@@ -41,10 +41,36 @@
                       </div>
 
 
-                        
-
-
                     </form>
+
+                    <!--- loader here --->
+                    <!---results-->
+
+                    <div id="result">
+                        <h5>Results</h5>
+                        <div class="form-group">
+                            <div class="input-group">
+                            <span class="input-group-text">Monthly Payment</span>
+                            <input type="number" class="form-control" id="monthly-payment" disabled>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                        <span class="input-group-text">Total Payment</span>
+                        <input type="number" class="form-control" id="total-payment" disabled>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                        <span class="input-group-text">Total Interest</span>
+                        <input type="number" class="form-control" id="total-interest" disabled>
+                        </div>
+                    </div>
+
+
 
 
                     
