--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                     </form>
 
                     <!--- loader here --->
+                    <div id="loading">
+                
+                        <div style="width:50%;height:0;padding-bottom:36%;position:relative;"><iframe src="https://giphy.com/embed/jAYUbVXgESSti" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/google-icon-loading-jAYUbVXgESSti">via GIPHY</a></p>
+                    </div>
                     <!---results-->
 
                     <div id="result">
