added some more functionality

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                       </div>
 
                       <div class="form-group">
-                          <input type="number" class="form-control" placeholder="Years To Repay">
+                          <input type="number" class="form-control" id="years" placeholder="Years To Repay">
                       </div>
                       <div class="form-group">
-                          <input type="submit" value="Calculate" class="btn btn-dark btn-block">
+                          <input type="submit" value="calculate" class="btn btn-dark btn-block">
                       </div>
 
 
