--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/style.css">
+   <style>
+       #loading, #results {
+
+           display:none;
+       }
+   </style>
 
    
 </head>
@@ -50,7 +55,7 @@
                     </div>
                     <!---results-->
 
-                    <div id="result">
+                    <div id="results" class="pt-4">
                         <h5>Results</h5>
                         <div class="form-group">
                             <div class="input-group">
@@ -58,7 +63,7 @@
                             <input type="number" class="form-control" id="monthly-payment" disabled>
                             </div>
                         </div>
-                    </div>
+                    
 
                     <div class="form-group">
                         <div class="input-group">
@@ -73,6 +78,8 @@
                         <input type="number" class="form-control" id="total-interest" disabled>
                         </div>
                     </div>
+
+                </div>
 
 
 
