--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                       <div class="form-group">
                           <input type="number" class="form-control" id="years" placeholder="Years To Repay">
                       </div>
-                      <div class="form-group">
+                      <div class="forn-group">
                           <input type="submit" value="calculate" class="btn btn-dark btn-block">
                       </div>
 
@@ -49,9 +49,7 @@
                     </form>
 
                     <!--- loader here --->
-                    <div id="loading">
-                
-                        <div style="width:50%;height:0;padding-bottom:36%;position:relative;"><iframe src="https://giphy.com/embed/jAYUbVXgESSti" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/google-icon-loading-jAYUbVXgESSti">via GIPHY</a></p>
+                    <div id="loading" style="width:50%;height:0;padding-bottom:36%;position:relative;"><iframe src="https://giphy.com/embed/jAYUbVXgESSti" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/google-icon-loading-jAYUbVXgESSti">via GIPHY</a></p>
                     </div>
                     <!---results-->
 
